Updated price display code

--- a/profitable-flashloans/update/28-deploy-flashloan-smart-contract/package.json
+++ b/profitable-flashloans/update/28-deploy-flashloan-smart-contract/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "web3": "^1.5.2",
     "@truffle/hdwallet-provider": "^1.4.3",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "web3": "^1.5.2"
   }
 }
