--- a/profitable-flashloans/bsc-flashswap-update/28-deploy-flashloan-smart-contract/package.json
+++ b/profitable-flashloans/bsc-flashswap-update/28-deploy-flashloan-smart-contract/package.json
@@ -9,6 +9,7 @@
   "license": "ISC",
   "dependencies": {
     "web3": "^1.5.2",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "@truffle/hdwallet-provider": "^2.0.0"
   }
 }
