--- a/profitable-flashloans/28-deploy-flashloan-smart-contract/package.json
+++ b/profitable-flashloans/28-deploy-flashloan-smart-contract/package.json
@@ -10,10 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@studydefi/money-legos": "^2.3.3",
-    "@truffle/hdwallet-provider": "^1.0.35",
-    "@uniswap/sdk": "^2.0.5",
-    "dotenv": "^8.2.0",
-    "web3": "^1.2.9"
+    "@studydefi/money-legos": "2.3.3",
+    "@truffle/hdwallet-provider": "1.0.35",
+    "@uniswap/sdk": "2.0.5",
+    "dotenv": "8.2.0",
+    "web3": "1.2.9"
   }
 }
